# RustSoftwareRendering

./: .gitignore  Cargo.toml  README.md  codegen.py  utils_impls.rs
src/: buffer.rs  main.rs  main_sdl.rs  model.rs  obj_shader.rs  rasterizer.rs  shader.rs  triangle.rs  utils.rs
