[package]
name = "rust_software_rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.2"
minifb = "0.20.0"
image = "0.23.14"
# noise = "0.7.0"
# colorgrad = "0.5.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
# lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

